@@ -1,6 +1,10 @@
+Tue Nov  4 17:17:07 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gconf/gconf-changeset.h: register GConfChangeSet as a boxed type.
+
 2003-11-02  Havoc Pennington  <hp@pobox.com>
 
-        * ChangeLog: ascii-ize various people's names; Emacs can't handle 
+	* ChangeLog: ascii-ize various people's names; Emacs can't handle 
 	UTF-8, sadly
 
 	* backends/Makefile.am: cut over to the new backend implementation
